build: fix requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Flask==3.1.2
 MarkupSafe==3.0.3
 numpy==2.4.1
-openai_clip==1.0.1
 Pillow==12.1.0
 torch==2.10.0
+torchvision==0.25.0
+git+https://github.com/openai/CLIP.git@main#egg=clip
